fixing broken borders on ios

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -38,8 +38,9 @@ input:hover {
 select {
   font-family: "Courier New", monospace;
   padding: 0 8px;
+  border: solid 1px black;
+  border-radius: 3px;
   appearance: none;
-
 }
 select:hover {
   border: solid 2px black;
